[package]
name = "csym"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.algebra]
path = "./library/algebra"

[dependencies.matrix]
path = "./library/matrix"

[dependencies.discrete]
path = "./library/discrete"